# kai-local

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: deps.py  main.py  models.py  settings.py
backend/agent/: __init__.py  agent.py
backend/clients/telegram/: models.py  telegram.py
backend/db/: pool.py
backend/services/: meal_service.py  memory_service.py  transcriber.py  webhook_service.py  workout_service.py
backend/tasks/: daily_report.py  weekly_report.py
db/migrations/: 20250812145640_create_tables.sql  20250812185631_add_memory_table.sql
scripts/: get_updates.sh  register-webhook.sh  run.sh
