[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Or Shemtov", email = "oriesh@icloud.com" }]
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "audioop-lts>=0.2.2",
    "fastapi[standard]>=0.116.1",
    "openai==1.99.1",
    "pydantic-ai>=0.6.2",
    "pydantic-settings>=2.10.1",
    "pydub>=0.25.1",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
